--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -12,7 +12,7 @@
     <img src="<%= listing.image.url %>" class="card-img-top" alt="Listing image">
     <div class="card-body">
       <p><strong>Owned By:</strong> <%= listing.owner.username %></p>
-      <p><strong>Price:</strong> ₹<%= listing.price.toLocaleString('en-IN') %>/Night</p>
+      <p><strong>Price:</strong> ₹<%= listing.price.toLocaleString('en-IN') %>/Month</p>
       <p><strong>Location:</strong> <%= listing.location %></p>
 
       <p><strong>city:</strong> <%= listing.city %></p>
