--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,7 +253,27 @@ body {
 .dropdown-item i {
   color: cadetblue;
 }
+ .scroll-container {
+    position: relative;
+    max-height: 100px;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+  }
 
+  .scroll-container.expanded {
+    max-height: none;
+  }
+
+  .read-more-label {
+    display: inline-block;
+    color: blue;
+    cursor: pointer;
+    margin-top: 8px;
+  }
+
+  .read-more-label:hover {
+    text-decoration: underline;
+  }
 /* Responsive Design */
 @media (max-width: 768px) {
   .search-form {
