Update footer and boilerplate layout

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -19,7 +19,7 @@
       </a>
     </div>
 
-    <div class="f-info-brand">&copy;My House</div>
+    <div class="f-info-brand">&copy;My Apartment</div>
 
     <div class="f-info-links">
       <a href="/privacy">Privacy</a>
