--- a/views/chat/chatroom.ejs
+++ b/views/chat/chatroom.ejs
@@ -2,9 +2,9 @@
 
 <div class="container mt-4">
 
-  <p><strong style="color: rgb(230, 26, 26);">Listing:</strong> <%= listing.title %></p>
+  <p><strong style="color: rgb(230, 26, 26);">Apartment:</strong> <%= listing.title %></p>
 
-  <h5 style="color: rgb(24, 25, 23);">
+  <h5 style="color: rgb(24, 25, 23);"><strong style="color: #0d6efd;">House Owner:</strong>
     <%= otherUser.username %> 
     <span id="userStatus" style="font-weight: normal; font-size: 0.9rem; color: red;">(Offline)</span>
   </h5>
