--- a/views/chat/inbox.ejs
+++ b/views/chat/inbox.ejs
@@ -18,7 +18,7 @@
               </div>
              <div class="text-muted">
               <div class="text-muted"> 
-                <span class="text-danger fw-semibold">Listing Name:</span> <%= c.listing.title %><br>
+                <span class="text-danger fw-semibold">Apartment Name:</span> <%= c.listing.title %><br>
                 <span class="text-success fw-semibold">Message:</span> <%= c.lastMessage.length > 50 ? c.lastMessage.slice(0, 50) + "..." : c.lastMessage %>
               </div>
 
