--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -24,10 +24,10 @@
 
         <!-- Image Upload Field -->
         <div class="mb-3">
-          <label for="image" class="form-label">Image URL</label>
+          <label for="image" class="form-label">Image</label>
           <input type="file" name="image" placeholder="Enter Image URL" class="form-control">
           <div class="invalid-feedback">
-            Please insert a URL
+           
           </div>
         </div>
 
