added functionaliy of toggle read more read less

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,6 +20,7 @@
 
       <p class="mt-3 mb-1"><strong>Description:</strong></p>
       <div id="descriptionContainer" class="scroll-container">
+         <input type="checkbox" id="expand-toggle">
         <div class="scroll"><%= listing.description %></div>
       </div>
       <span id="toggleButton" class="read-more-label">Read More</span>
